# r-code

./: .gitignore  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  lint-staged.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: commands.rs  git.rs  highlight.rs  lib.rs  lib_tests.rs  main.rs  search.rs
src/app/: layout.tsx  page.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/ContextMenu/: ContextMenu.tsx
src/components/Editor/: Editor.tsx
src/components/Git/: GitPanel.tsx
src/components/Layout/: EditorLayout.tsx
src/components/RecentFiles/: RecentFilesPanel.tsx
src/components/Search/: SearchPanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Sidebar/: FileTree.tsx  Sidebar.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Tabs/: Tab.tsx  TabBar.tsx
src/components/Terminal/: Terminal.tsx
src/lib/: recent-files.tsx  settings-context.tsx  tauri-context.tsx
src/lib/hooks/: useKeyboardShortcuts.ts
src/styles/: globals.css
src/tests/: editor.test.ts
