[package]
name = "r-code"
version = "0.1.0"
description = "A secure, lightweight code editor"
authors = ["R-Code Team"]
edition = "2021"

[lib]
name = "r_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror = "2"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
shlex = "1.3"
